# pdf-cleaning

./: .gitignore  README.md  application.ipynb  output_path  pyproject.toml  requirements.txt  test_notebook.ipynb
example/: pdf_jpg.json  predictions.xlsx  test.ipynb
example/cleaned_pdf/: armbrust-cidr21_toc.txt
pdf-cleaning/: __init__.py  pdf_cleaning.py
pdf_cleaning/: __init__.py  application.py  cleaning.py  unzip.py
resources/: data.yaml  fine_tuning.ipynb  preparation.ipynb
